com.sevtekin.am.docker/prod/backend/_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ambackend
  labels:
    app: am
spec:
  replicas: 1
  selector:
    matchLabels:
      app: am
  template:
    metadata:
      labels:
        app: am
    spec:
      containers:
        - image: us.gcr.io/assetmanager-171616/backend:latest
          name: ambackend
          imagePullPolicy: Always
          ports:
            - containerPort: 7080
              name: am
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
            - name: backend-persistent-storage
              mountPath: /app/snapshots
      volumes:
        - name: tz-config
          hostPath:
             path: /usr/share/zoneinfo/US/Pacific
        - name: backend-persistent-storage
          gcePersistentDisk:
            pdName: ambackend-disk
            fsType: ext4
