com.sevtekin.am.docker/prod/backend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ambackend
  labels:
    app: am
spec:
  replicas: 1
  selector:
    matchLabels:
      app: am
  template:
    metadata:
      labels:
        app: am
    spec:
      containers:
        - image: us.gcr.io/assetmanager-171616/backend:latest
          name: ambackend
          imagePullPolicy: Always
          ports:
            - containerPort: 443
              name: am
