com.sevtekin.am.docker/prod/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambackend
  labels:
    app: am
spec:
  ports:
    - port: 443
  selector:
    app: am
  type: LoadBalancer
