com.sevtekin.am.docker/prod/backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambackendingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tls-secret
  backend:
    serviceName: ambackend
    servicePort: 80
